[gd_scene load_steps=11 format=2]

[ext_resource path="res://fonts/Montserrat-Regular-16.tres" type="DynamicFont" id=1]
[ext_resource path="res://fonts/Alata-Regular-28.tres" type="DynamicFont" id=2]
[ext_resource path="res://TodoApp.gd" type="Script" id=3]
[ext_resource path="res://fonts/Montserrat-Regular-12.tres" type="DynamicFont" id=4]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 1 )

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 0.988235, 0.360784, 0.490196, 1, 0.415686, 0.509804, 0.984314, 1 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="StyleBoxTexture" id=4]
texture = SubResource( 3 )
region_rect = Rect2( 0, 0, 2048, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color( 0, 0, 0, 0.12549 )
shadow_size = 6
shadow_offset = Vector2( 0, 4 )

[sub_resource type="StyleBoxFlat" id=6]
content_margin_left = 12.0
content_margin_right = 12.0
bg_color = Color( 0, 0, 0, 0.0313726 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 0.0862745 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="Background" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -0.840942
margin_bottom = -0.840942
theme = SubResource( 1 )
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TodoApp" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -222.5
margin_top = -264.0
margin_right = 222.5
margin_bottom = 264.0
custom_styles/panel = SubResource( 5 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="TodoApp"]
margin_right = 445.0
margin_bottom = 528.0
custom_constants/separation = 2

[node name="LabelContainer" type="MarginContainer" parent="TodoApp/VBox"]
margin_right = 445.0
margin_bottom = 63.0
custom_constants/margin_top = 12
custom_constants/margin_bottom = 12

[node name="Label" type="Label" parent="TodoApp/VBox/LabelContainer"]
margin_top = 12.0
margin_right = 445.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Todo App"
align = 1
valign = 1

[node name="InfoLabel" type="Label" parent="TodoApp/VBox"]
margin_top = 65.0
margin_right = 445.0
margin_bottom = 81.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.380392, 0.380392, 0.380392, 1 )
text = "0 / 20"
align = 1

[node name="HideCompletedButton" type="CheckButton" parent="TodoApp/VBox"]
margin_left = 134.0
margin_top = 83.0
margin_right = 311.0
margin_bottom = 123.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.380392, 0.380392, 0.380392, 1 )
custom_colors/font_color_hover = Color( 0.380392, 0.380392, 0.380392, 1 )
custom_colors/font_color_pressed = Color( 0.380392, 0.380392, 0.380392, 1 )
text = "Hide completed"

[node name="TodoItemsScroll" type="ScrollContainer" parent="TodoApp/VBox"]
margin_top = 125.0
margin_right = 445.0
margin_bottom = 476.0
size_flags_vertical = 3

[node name="Margin" type="MarginContainer" parent="TodoApp/VBox/TodoItemsScroll"]
margin_right = 445.0
margin_bottom = 351.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 16
custom_constants/margin_left = 16

[node name="TodoItems" type="VBoxContainer" parent="TodoApp/VBox/TodoItemsScroll/Margin"]
margin_left = 16.0
margin_right = 429.0
margin_bottom = 351.0
size_flags_horizontal = 3

[node name="TextFieldContainer" type="MarginContainer" parent="TodoApp/VBox"]
margin_top = 478.0
margin_right = 445.0
margin_bottom = 528.0
custom_constants/margin_right = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="TextField" type="LineEdit" parent="TodoApp/VBox/TextFieldContainer"]
margin_left = 8.0
margin_right = 437.0
margin_bottom = 42.0
rect_min_size = Vector2( 0, 42 )
custom_styles/read_only = SubResource( 6 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 6 )
custom_colors/selection_color = Color( 0, 0, 0, 0.207843 )
custom_colors/cursor_color = Color( 0.505882, 0.505882, 0.505882, 1 )
custom_colors/font_color = Color( 0.215686, 0.215686, 0.215686, 1 )
clear_button_enabled = true
placeholder_text = "Add item here..."
placeholder_alpha = 0.4
caret_blink = true
